<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- logical strings -->

    <string name="LScreenWidth">LScreenWidth</string>
    <string name="LScreenHeight">LScreenHeight</string>

    <!-- logical strings end -->

    <string name="app_name">Hop</string>

    <string name="appNameForStoringFiles">Hop</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_login">Sign In</string>


    <string name="NoNet">Connect to the internet</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="countryCode">CC</string>
    <string name="number">number</string>
    <string name="submit">Submit</string>

    <string name="compulsary">    All fields are mandatory</string>


    

</resources>
